--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>COMP290</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>COMP290</title>
+    </head>
+    <body>
+        <p>This page was created by Matt Goodman for the COMP290 tools course.</p>
+    </body>
+</html>
